--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "dev": "start-test 3000 cy:open",
-    "cy:open": "cypress open"
+    "cy:open": "cypress open",
+    "cy:run": "cypress run",
+    "test:mutations": "stryker run"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -41,6 +43,8 @@
     "@cypress/code-coverage": "3.8.8",
     "@cypress/instrument-cra": "1.4.0",
     "@stryker-mutator/core": "4.3.1",
+    "@stryker-mutator/javascript-mutator": "4.0.0",
+    "@stryker-mutator/jest-runner": "4.3.1",
     "cypress": "6.2.0",
     "prettier": "2.2.1",
     "start-server-and-test": "1.11.7"
